@@ -1,6 +1,7 @@
 Revision history for Dist::Zilla::Plugin::Prepender
 
 {{$NEXT}}
+ - removed MooseX::Has::Sugar dependency
 
 2.003     2016-11-26 03:46:22+01:00 Europe/Paris
  - fix warnings in tests caused by changes in Dist::Zilla 6 (RT#118890)
